fixed whitespace at bottom

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -24,12 +24,10 @@ html,body,.container {
     height:100%;
     font-family: Ubuntu, sans-serif;
 }
+
 .container {
     display:table;
     width: 100%;
-    margin-top: -50px;
-    padding: 50px 0 0 0; /*set left/right padding according to needs*/
-    box-sizing: border-box;
 }
 
 .row {
